redirected to admin/dashboard.html, changed theme to dark gray.

--- a/public/login.html
+++ b/public/login.html
@@ -82,7 +82,7 @@
         const data = await response.json();
         
         if (response.ok) {
-          window.location.href = '/dashboard.html';
+          window.location.href = '/admin/dashboard.html';
         } else {
           errorElement.textContent = data.error || 'Login failed. Please try again.';
         }
