--- a/public/admin/dashboard.html
+++ b/public/admin/dashboard.html
@@ -10,17 +10,15 @@
 <body class="bg-gray-100 font-sans">
     <div class="flex h-screen">
         <!-- Sidebar -->
-        <div class="w-64 bg-blue-800 text-white">
-            <div class="p-4 border-b border-blue-700">
-                <h1 class="text-xl font-bold">Admin Panel</h1>
+        <div class="w-64 bg-gray-800 text-white">
+            <div class="p-4 border-b border-gray-700">
+                <h1 class="text-xl font-bold">VVWorx  Admin Panel</h1>
             </div>
             <nav class="mt-4">
-                <a href="#" class="block py-2 px-4 bg-blue-700">
+                <a href="#" class="block py-2 px-4 bg-gray-700">
                     <i class="fas fa-envelope mr-2"></i> Contacts
                 </a>
-                <a href="#" class="block py-2 px-4 hover:bg-blue-700">
-                    <i class="fas fa-cog mr-2"></i> Settings
-                </a>
+                <!-- <a href="#" class="block py-2 px-4 hover:bg-blue-700"><i class="fas fa-cog mr-2"></i> Settings</a> -->
                 <button id="logoutBtn" class="w-full text-left py-2 px-4 hover:bg-blue-700">
                     <i class="fas fa-sign-out-alt mr-2"></i> Logout
                 </button>
