opened dashboard page on root if session exists then ok else redirect to login, added loader and hides page contents untill checks the session validity.

--- a/public/login.html
+++ b/public/login.html
@@ -82,7 +82,8 @@
         const data = await response.json();
         
         if (response.ok) {
-          window.location.href = '/admin/dashboard.html';
+          // window.location.href = '/admin/dashboard.html';
+          window.location.href = '/';  // Now redirects to root which shows dashboard
         } else {
           errorElement.textContent = data.error || 'Login failed. Please try again.';
         }
